[save] clean up code